chapter 4 draft mostly modifications to the discussion/conclusions to make it good enough to give Tony

--- a/glossary/glossary.tex
+++ b/glossary/glossary.tex
@@ -35,6 +35,10 @@
   description={Derived allele frequency}
 }
 
+\newacronym[description={Akaike information criterion}]{aic}{AIC}{Akaike information criterion}
+
+\newacronym[description={Kyoto Encyclopedia of Genes and Genomics}]{kegg}{KEGG}{Kyoto Encyclopedia of Genes and Genomics}
+
 \newacronym[description={Genetic relationship matrix}]{grm}{GRM}{genetic relationship matrix}
 
 \newacronym[description={False discovery rate}]{fdr}{FDR}{false discovery rate}
