--- a/references.bib
+++ b/references.bib
@@ -3612,3 +3612,69 @@ url = {http://www.pnas.org/cgi/doi/10.1073/pnas.1019276108},
 volume = {108},
 year = {2011}
 }
+
+@article{Wigginton2005,
+abstract = {Deviations from Hardy-Weinberg equilibrium (HWE) can indicate inbreeding, population stratification, and even problems in genotyping. In samples of affected individuals, these deviations can also provide evidence for association. Tests of HWE are commonly performed using a simple chi2 goodness-of-fit test. We show that this chi2 test can have inflated type I error rates, even in relatively large samples (e.g., samples of 1,000 individuals that include approximately 100 copies of the minor allele). On the basis of previous work, we describe exact tests of HWE together with efficient computational methods for their implementation. Our methods adequately control type I error in large and small samples and are computationally efficient. They have been implemented in freely available code that will be useful for quality assessment of genotype data and for the detection of genetic association or population stratification in very large data sets.},
+author = {Wigginton, Janis E. and Cutler, David J. and Abecasis, Gon{\c{c}}alo R.},
+doi = {10.1086/429864},
+file = {:home/murraycadzow/Dropbox/Papers/1-s2.0-S0002929707607356-main.pdf:pdf},
+isbn = {0002-9297 (Print)},
+issn = {00029297},
+journal = {The American Journal of Human Genetics},
+number = {5},
+pages = {887--893},
+pmid = {15789306},
+title = {{A Note on Exact Tests of Hardy-Weinberg Equilibrium}},
+url = {http://linkinghub.elsevier.com/retrieve/pii/S0002929707607356},
+volume = {76},
+year = {2005}
+}
+
+
+@article{Visscher2008,
+author = {Visscher, Peter M and Hill, William G and Wray, Naomi R},
+doi = {10.1038/nrg2322},
+file = {:home/murraycadzow/Dropbox/Papers/nrg2322.pdf:pdf},
+issn = {1471-0056},
+journal = {Nature Reviews Genetics},
+mendeley-groups = {Fundamental concepts in genetics},
+month = {apr},
+number = {4},
+pages = {255--266},
+title = {{Heritability in the genomics era — concepts and misconceptions}},
+url = {http://www.nature.com/doifinder/10.1038/nrg2322 http://www.nature.com/articles/nrg2322},
+volume = {9},
+year = {2008}
+}
+
+@article{Khalili2016,
+abstract = {CKD is a significant health concern with an underlying genetic component. Multiple genome-wide association studies (GWASs) strongly associated CKD with the shroom family member 3 (SHROOM3) gene, which encodes an actin-associated protein important in epithelial morphogenesis. However, the role of SHROOM3 in kidney development and function is virtually unknown. Studies in zebrafish and rat showed that alterations in Shroom3 can result in glomerular dysfunction. Furthermore, human SHROOM3 variants can induce impaired kidney function in animal models. Here, we examined the temporal and spatial expression of Shroom3 in the mammalian kidney. We detected Shroom3 expression in the condensing mesenchyme, Bowman's capsule, and developing and mature podocytes in mice. Shroom3 null (Shroom3(Gt/Gt)) mice showed marked glomerular abnormalities, including cystic and collapsing/degenerating glomeruli, and marked disruptions in podocyte arrangement and morphology. These podocyte-specific abnormalities are associated with altered Rho-kinase/myosin II signaling and loss of apically distributed actin. Additionally, Shroom3 heterozygous (Shroom3(Gt/+)) mice showed developmental irregularities that manifested as adult-onset glomerulosclerosis and proteinuria. Taken together, our results establish the significance of Shroom3 in mammalian kidney development and progression of kidney disease. Specifically, Shroom3 maintains normal podocyte architecture in mice via modulation of the actomyosin network, which is essential for podocyte function. Furthermore, our findings strongly support the GWASs that suggest a role for SHROOM3 in human kidney disease.},
+author = {Khalili, H. and Sull, A. and Sarin, S. and Boivin, F. J. and Halabi, R. and Svajger, B. and Li, A. and Cui, V. W. and Drysdale, T. and Bridgewater, D.},
+doi = {10.1681/ASN.2015060621},
+file = {:home/murraycadzow/Dropbox/Papers/2965.full.pdf:pdf},
+issn = {1046-6673},
+journal = {Journal of the American Society of Nephrology},
+number = {10},
+pages = {2965--2973},
+pmid = {26940091},
+title = {{Developmental Origins for Kidney Disease Due to Shroom3 Deficiency}},
+url = {http://www.jasn.org/cgi/doi/10.1681/ASN.2015060621},
+volume = {27},
+year = {2016}
+}
+
+@article{Ramirez-Soriano2009,
+abstract = {Most single-nucleotide polymorphism (SNP) data suffer from an ascertainment bias caused by the process of SNP discovery followed by SNP genotyping. The final genotyped data are biased toward an excess of common alleles compared to directly sequenced data, making standard genetic methods of analysis inapplicable to this type of data. We here derive corrected estimators of the fundamental population genetic parameter = 4N(e)mu (N(e), effective population size; mu, mutation rate) on the basis of the average number of pairwise differences and on the basis of the number of segregating sites. We also derive the variances and covariances of these estimators and provide a corrected version of Tajima's D statistic. We reanalyze a human genomewide SNP data set and find substantial differences in the results with or without ascertainment bias correction.},
+author = {Ram{\'{i}}rez-Soriano, Anna and Nielsen, Rasmus},
+doi = {10.1534/genetics.108.094060},
+file = {:home/murraycadzow/.local/share/data/Mendeley Ltd./Mendeley Desktop/Downloaded/Ram{\'{i}}rez-Soriano, Nielsen - 2009 - Correcting estimators of $\theta$ and Tajima's D for ascertainment biases caused by the single-nucleotide p.pdf:pdf},
+isbn = {0016-6731},
+issn = {00166731},
+journal = {Genetics},
+number = {February},
+pages = {701--710},
+pmid = {19087964},
+title = {{Correcting estimators of $\theta$ and Tajima's D for ascertainment biases caused by the single-nucleotide polymorphism discovery process}},
+volume = {181},
+year = {2009}
+}
